updated map arrow, fixed z-index and the zoom level of the map

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -29,6 +29,6 @@ body {
 
 #map {
     height: 40vh;
-    z-index: -1;
+    z-index: 0;
     height: calc(100vh - 27vh);
 }
