--- a/scss/_ip-info.scss
+++ b/scss/_ip-info.scss
@@ -15,6 +15,7 @@
   margin-right: auto; 
   max-width: 80vw;
   top: 82px;
+  z-index: 2;
 
   @include screen-min(700px) {
     // margin-bottom: -47px;
