--- a/src/style/main.css
+++ b/src/style/main.css
@@ -28,7 +28,7 @@ body {
 
 #map {
   height: 40vh;
-  z-index: -1;
+  z-index: 0;
   height: 73vh;
 }
 
@@ -98,6 +98,7 @@ body {
   margin-right: auto;
   max-width: 80vw;
   top: 82px;
+  z-index: 2;
 }
 @media all and (min-width: 700px) {
   .ip-info {
